WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222834
Using an undeclared private field inside eval shouldn't crash
https://bugs.webkit.org/show_bug.cgi?id=222834
Summary
Using an undeclared private field inside eval shouldn't crash
Saam Barati
Reported
2021-03-05 15:13:21 PST
...
Attachments
patch
(6.75 KB, patch)
2021-03-05 15:57 PST
,
Saam Barati
ysuzuki
: review+
Details
Formatted Diff
Diff
patch for landing
(7.44 KB, patch)
2021-03-08 11:42 PST
,
Saam Barati
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2021-03-05 15:15:20 PST
<
rdar://75035388
>
Saam Barati
Comment 2
2021-03-05 15:57:13 PST
Created
attachment 422448
[details]
patch
Yusuke Suzuki
Comment 3
2021-03-05 15:59:10 PST
Comment on
attachment 422448
[details]
patch r=me
Saam Barati
Comment 4
2021-03-08 11:42:54 PST
Created
attachment 422593
[details]
patch for landing
EWS
Comment 5
2021-03-08 14:03:48 PST
Committed
r274102
: <
https://commits.webkit.org/r274102
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 422593
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug