Using an undeclared private field inside eval shouldn't crash https://bugs.webkit.org/show_bug.cgi?id=222834 <rdar://75035388>

Reviewed by Yusuke Suzuki.

JSTests:

* stress/declared-private-field-in-eval.js: Added.
* stress/undeclared-private-field-in-eval.js: Added.

Source/JavaScriptCore:

The private methods patch regressed our behavior when using undeclared private
fields or methods from an inner eval inside a class. That patch made us crash.
This patch aligns us with the spec to throw a Syntax Error during eval parsing.

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseInner):
(JSC::Parser<LexerType>::parseMemberExpression):
* parser/Parser.h:
(JSC::Parser<LexerType>::parse):


Canonical link: https://commits.webkit.org/235036@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274102 268f45cc-cd09-0410-ab3c-d52691b4dbfc